--- a/ChinookSample/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSample/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -46,7 +46,10 @@
     <Compile Include="Entities\Artist.cs" />
     <Compile Include="Entities\MediaType.cs" />
     <Compile Include="Entities\Track.cs" />
+    <Compile Include="POCOs\AlbumTrackSummary.cs" />
+    <Compile Include="POCOs\ArtistAlbums.cs" />
     <Compile Include="POCOs\CustomerContact.cs" />
+    <Compile Include="POCOs\MediaTypeTrackCounts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
