--- a/ChinookSample/ChinookSystem.Data/ChinookSystem.Data.csproj
+++ b/ChinookSample/ChinookSystem.Data/ChinookSystem.Data.csproj
@@ -46,11 +46,16 @@
     <Compile Include="Entities\Artist.cs" />
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\Employee.cs" />
+    <Compile Include="Entities\Genre.cs" />
+    <Compile Include="Entities\Invoice.cs" />
+    <Compile Include="Entities\InvoiceLine.cs" />
     <Compile Include="Entities\MediaType.cs" />
+    <Compile Include="Entities\PlayList.cs" />
     <Compile Include="Entities\Track.cs" />
     <Compile Include="POCOs\AlbumTrackSummary.cs" />
     <Compile Include="POCOs\ArtistAlbums.cs" />
     <Compile Include="POCOs\CustomerContact.cs" />
+    <Compile Include="POCOs\EmployeeNameList.cs" />
     <Compile Include="POCOs\MediaTypeTrackCounts.cs" />
     <Compile Include="POCOs\RepresentitiveCustomers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
